[project]
name = "ruff-mypy"
version = "0.1.0"
description = ""
authors = [
    {name = "Matevž Vidovič",email = "matevz.vidovic@gmail.si"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.ruff]
# Linting rules and formatting
line-length = 100
target-version = "py312"
fix = true
lint.extend-select = ["I", "UP", "B", "C90"]  # import sorting, pyupgrade, bugbear, complexity
exclude = ["build", "dist", ".venv"]

[tool.mypy]
python_version = "3.12"
strict = true
# Flip these later to become stricter:
ignore_missing_imports = true       # don’t error on untyped libs
disallow_untyped_defs = false       # allow untyped function defs
disallow_incomplete_defs = false    # allow partially typed defs
warn_return_any = false             # don’t complain about returning Any
warn_unused_ignores = false         # don’t warn about unused # type: ignore
check_untyped_defs = false          # Skips type checking for untyped functions
no_implicit_optional = false        # Allows implicit `Optional[...]` for args with default `None`
warn_unreachable = false           # Disables unreachable code warnings

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
